fixed layout and colors, still need to fix Article sections

--- a/index.html
+++ b/index.html
@@ -20,33 +20,32 @@ Paragraph contained within the Article
 </head>
 
 <body>
-
-  <header>
-    header
-  </header>
+   
+<header>
+  header
+</header>
 
 <nav>
   nav
 </nav>
 
-<section> section
-  <article> article
-    <div>
-      <h1>
-h1, h2, h3 
-      </h1>
-      <p>
-        p
-      </p>
+
+
+  <section id="full">
+    section
+    <div id="article">
+      <Article>article<br>
+        
+      <h1>h1, h2, h3 </h1>
+      <p>p</p>
     </div>
-    
-  </article>
-</section>
+      </Article>
+    </div>   
+  </section>
 
 <aside>
-  <h1> aside heading</h1>
-</aside>
-
+    aside
+  </aside>
 </body>
 <footer>
   footer
