Added a reset.css file

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ Paragraph contained within the Article
 <head>
   <meta charset="UTF-8">
   <title>1.2.9 Exercise</title>
+  <link rel="stylesheet" type="text/css" href="reset.css">
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
@@ -30,10 +31,10 @@ Paragraph contained within the Article
 </nav>
 
 
-
-  <section id="full">
+<div>
+  <section class="full">
     section
-    <div id="article">
+    <div class="article">
       <Article>article<br>
         
       <h1>h1, h2, h3 </h1>
@@ -46,6 +47,7 @@ Paragraph contained within the Article
 <aside>
     aside
   </aside>
+</div>
 </body>
 <footer>
   footer
